# save-switch

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  SaveSwitch.sln
DiskCore/: DiskCore.csproj  DiskCorePlatform.cs  DiskInfo.cs  DiskStream.cs  PartitionInfo.cs
DiskCore/DiskCoreCommon/: IDiskCorePlatform.cs  IDiskInfo.cs  IDiskStream.cs  IPartitionInfo.cs
DiskCore/DiskCoreWin/: DiskCorePlatformWin.cs  DiskInfoWin.cs  DiskStreamWin.cs  NativeWin.cs  PartitionInfoWin.cs
SaveSwitchCLI/: Program.cs  SaveSwitchCLI.csproj
SaveSwitchCore/: FatFileSystemDirectory.cs  FatFileSystemProvider.cs  SaveSwitch.cs  SaveSwitchCore.csproj  SaveSwitchException.cs  SwitchNand.cs
lib/hash-library/: CMakeLists.txt
lib/hash-library/include/: endian.h
save_switch_common/: CMakeLists.txt  log.cpp  log.h  terminal.h  utils.cpp  utils.h
save_switch_common/cloud_storage/: cloud_storage.cpp  cloud_storage.h  cloud_storage_entry.h  cloud_storage_errors.h  filepath.h
save_switch_common/cloud_storage/google_drive/: google_drive.cpp  google_drive.h  google_drive_cache.h
save_switch_common/http_client/: http_client.cpp  http_client.h  http_request.cpp  http_request.h  http_response.cpp  http_response.h  http_types.h
save_switch_common/save_storage/: filepath.cpp  save_storage.cpp  save_storage.h  save_storage_entry.h  save_storage_errors.h
save_switch_common/save_storage/google_drive/: google_drive.cpp  google_drive.h
save_switch_nx/: CMakeLists.txt  config.h  main.cpp  save_switch.cpp  save_switch.h
save_switch_nx/switch/: switch_app.h  switch_data.cpp  switch_data.h  switch_save.h  switch_user.h
